--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <ul class="listaHeader">
                   <li><a class="item uno" href="index.html">Inicio</a></li>
                   <li><a class="item dos" href="pages/Tienda.html">Tienda</a></li>
-                  <li><a class="item tres" href="pages/Ubicacion.html">Ubicacion</a></li>
+                  <li><a class="item tres" href="pages/Envios.html">Envios</a></li>
                   <li><a class="item cuatro" href="pages/Contacto.html">Contacto</a></li>
-                  <li><a class="item cinco" href="pages/Nosotros.html">Nosotros</a></li>
+                  <li><a class="item cinco" href="pages/Ofertas.html">Ofertas</a></li>
               </ul>
             </div>
        
