--- a/pages/Envios.html
+++ b/pages/Envios.html
@@ -18,7 +18,7 @@
 <body>
     <header class="bodyheader">
         <div>
-            <h1><a class="titulo" href="Titulo">KanyBijouterie</a></h1>
+            <h1><a class="titulo" href="../index.html">KanyBijouterie</a></h1>
         </div>
         <div>
             <ul class="listaHeader">
@@ -26,12 +26,23 @@
               <li><a class="item dos" href="Tienda.html">Tienda</a></li>
               <li><a class="item tres" href="Envios.html">Envios</a></li>
               <li><a class="item cuatro" href="Contacto.html">Contacto</a></li>
-              <li><a class="item cinco" href="Ofertas.html">Ofertas</a></li>
+              <li><a class="item cinco" href="Nosotros.html">Nosotros</a></li>
           </ul>
         </div>
    
 </header>
 
+<main>
+  <h2 class="envioTit">Envios desde Caballito/Flores o desde Once para todo el pais</h2>
+  <div class="enviosmain">
+    <img class="mapaubi" src="../IMG/MAPAUBI.png" alt="Ubicacion">
+  </div>
+  
+</main>
+<footer>
+  <p>Derechos Reservados &copy | Sitio web creado por Gianfranco Lagunas</p>
+  <div class="footerpag"> <a class="footerlink" href="../index.html">Inicio</a> | <a class="footerlink" href="Tienda.html">Tienda</a>| <a class="footerlink" href="Nosotros.html">Nosotros</a> | <a class="footerlink" href="Contacto.html">Contacto</a> | <a class="footerlink" href="Envios.html">Envios</a></div>
+</footer>
  <!-- JavaScript Bundle with Popper -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
