--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -29,14 +29,50 @@
               <li><a class="item cinco" href="Nosotros.html">Nosotros</a></li>
           </ul>
         </div>
+   
 </header>
+
 <main>
+  <h2 class="nostit">Preguntas Frecuentes</h2>
+  <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+          Donde estamos?
+        </button>
+      </h2>
+      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Somos una tienda mayorista de biyouterie, ubicada en el barrio de Balvanera (once)</div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          Se puede hacer compras y buscarlo personalmente?
+        </button>
+      </h2>
+      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Claro, hacemos envios a toda Argentina pero puede venir a ver los productos de lunes a viernes (9hs a 17hs) o sabado (9hs a 13hs)</div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingThree">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          Cual es el monto para comprar por mayor?
+        </button>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">El monto minimo de compra es de $3000</div>
+      </div>
+    </div>
+  </div>
+<h3 class="h3nosotros">Dejanos tu opinion o mensaje</h3>
   <div class="mb-3">
     <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="...">
   </div>
   <div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu mensaje</label>
+    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
   <div class="col-auto">
@@ -47,7 +83,7 @@
   <p>Derechos Reservados &copy | Sitio web creado por Gianfranco Lagunas</p>
   <div class="footerpag"> <a class="footerlink" href="../index.html">Inicio</a> | <a class="footerlink" href="Tienda.html">Tienda</a>| <a class="footerlink" href="Nosotros.html">Nosotros</a> | <a class="footerlink" href="Contacto.html">Contacto</a> | <a class="footerlink" href="Envios.html">Envios</a></div>
 </footer>
-
+    
  <!-- JavaScript Bundle with Popper -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
