--- a/pages/Tienda.html
+++ b/pages/Tienda.html
@@ -18,7 +18,7 @@
 <body>
     <header class="bodyheader">
         <div>
-            <h1><a class="titulo" href="Titulo">KanyBijouterie</a></h1>
+            <h1><a class="titulo" href="../index.html">KanyBijouterie</a></h1>
         </div>
         <div>
             <ul class="listaHeader">
@@ -26,16 +26,78 @@
               <li><a class="item dos" href="Tienda.html">Tienda</a></li>
               <li><a class="item tres" href="Envios.html">Envios</a></li>
               <li><a class="item cuatro" href="Contacto.html">Contacto</a></li>
-              <li><a class="item cinco" href="Ofertas.html">Ofertas</a></li>
+              <li><a class="item cinco" href="Nosotros.html">Nosotros</a></li>
           </ul>
         </div>
-   
-         <!-- JavaScript Bundle with Popper -->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
- <script>
-   AOS.init();
- </script>
 </header>
+
+<main>
+  <div class="card-group">
+    <div class="card">
+      <img src="../IMG/Bandanas.png" class="card-img-top" alt="Bandanas">
+      <div class="card-body">
+        <h2 class="card-title">Bandanas</h2>
+        <p class="card-text">100% algodon, todos los colores de la foto</p>
+        <p class="precio">$200 / u</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="../IMG/Billetienda.jpg" class="card-img-top" alt="Billeteras">
+      <div class="card-body">
+        <h2 class="card-title">Billeteras Everlast</h2>
+        <p class="card-text">Originales, multiples colores, simples, con cierre o abrojo</p>
+        <p class="precio">desde $1100 / u</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="../IMG/Llaveros.png" class="card-img-top" alt="Llaveros">
+      <div class="card-body">
+        <h2 class="card-title">Llaveros muñecos</h2>
+        <p class="card-text">Llaveros Keydrop de dibujos animados</p>
+        <p class="precio">desde $200 / u</p>
+      </div>
+    </div>
+  </div>
+  <div class="card-group">
+    <div class="card">
+      <img src="../IMG/aroperla.jpg" class="card-img-top" alt="Arosperla">
+      <div class="card-body">
+        <h2 class="card-title">Aros acero quirurgico</h2>
+        <p class="card-text">Todo acero, por blister</p>
+        <p class="precio">desde $540 / u</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="../IMG/mochilaeverlast.png" class="card-img-top" alt="Everlast mochila">
+      <div class="card-body">
+        <h2 class="card-title">Mochilas Everlast</h2>
+        <p class="card-text">Mochilas Everlast, 7 colores</p>
+        <p class="precio">$1500 / u</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="../IMG/vinchas.png" class="card-img-top" alt="Vinchas">
+      <div class="card-body">
+        <h2 class="card-title">Vinchas</h2>
+        <p class="card-text">Vinchas orejitas de plastico</p>
+        <p class="precio">$200 / u</p>
+      </div>
+    </div>
+  </div>
+</main>
+<footer>
+  <p>Derechos Reservados &copy | Sitio web creado por Gianfranco Lagunas</p>
+  <div class="footerpag"> <a class="footerlink" href="../index.html">Inicio</a> | <a class="footerlink" href="Tienda.html">Tienda</a>| <a class="footerlink" href="Nosotros.html">Nosotros</a> | <a class="footerlink" href="Contacto.html">Contacto</a> | <a class="footerlink" href="Envios.html">Envios</a></div>
+  
+</footer>
+
+
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
