--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -32,7 +32,7 @@
    
 </header>
 
-<main>
+<main class="mainosotros">
   <h2 class="nostit">Preguntas Frecuentes</h2>
   <div class="accordion accordion-flush" id="accordionFlushExample">
     <div class="accordion-item">
