--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -30,7 +30,7 @@
           </ul>
         </div>
 </header>
-<main>
+<main class="maincontacto">
   <div class="mb-3">
     <label for="exampleFormControlInput1" class="form-label">Nombre</label>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
