--- a/pages/Envios.html
+++ b/pages/Envios.html
@@ -8,10 +8,11 @@
     <meta name="description" content="Bijouterie Kany, precio y calidad">
     <title>Document</title>
     
-    <!-- CSS PROPIO -->
-    <link rel="stylesheet" href="../css/estilo.css">
+    
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<!-- CSS PROPIO -->
+<link rel="stylesheet" href="../css/estilo.css">
 <!-- AOS -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -39,7 +40,7 @@
   </div>
   
 </main>
-<footer>
+<footer class="footerenvios">
   <p>Derechos Reservados &copy | Sitio web creado por Gianfranco Lagunas</p>
   <div class="footerpag"> <a class="footerlink" href="../index.html">Inicio</a> | <a class="footerlink" href="Tienda.html">Tienda</a>| <a class="footerlink" href="Nosotros.html">Nosotros</a> | <a class="footerlink" href="Contacto.html">Contacto</a> | <a class="footerlink" href="Envios.html">Envios</a></div>
 </footer>
